--- a/.gitignore
+++ b/.gitignore
@@ -1,45 +1,42 @@
-# Ignore node_modules directory
+# Ignore Node.js modules and logs
 node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# Ignore build output
-/dist/
-/tmp/
-/out-tsc/
+# Environment variable files
+.env
 
-# Ignore log files
+# Logs
+logs
 *.log
 
-# Ignore environment files
-/src/environments/*.ts
+# Ignore build and coverage directories
+dist/
+coverage/
 
-# Ignore any generated files
-*.js
+# Ignore specific generated files (if applicable)
 *.js.map
-*.css
-*.html
-*.png
-*.svg
-*.jpg
-*.jpeg
+*.css.map
 
-# Ignore any editor/IDE specific files
-.idea/
+# Ignore generated files in specific directories, but not source files
+# (Adjust 'dist' to the correct build output directory if necessary)
+keep-clone-app/dist/
+backend/dist/
+
+# Ignore IDE/editor config files
 .vscode/
+.idea/
 *.sublime-project
 *.sublime-workspace
+.DS_Store
 
-# Ignore npm lock file
-package-lock.json
+# Don't ignore source files
+!keep-clone-app/src/**/*.js
+!backend/**/*.js
 
-# Ignore Angular generated testing files
-/*.js
-/*.js.map
-
-# Ignore compiled typescript types
-/*.d.ts
-
-# Ignore any dependencies installed via npm
-npm-debug.log*
-
-# Ignore coverage reports
-/coverage/
+# Ignore images in build directories, but not in source directories
+dist/**/*.png
+dist/**/*.svg
+dist/**/*.jpg
+dist/**/*.jpeg
